<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment"
    android:background="@color/orange"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/form"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_bg"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/orange"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/custom_bg"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/orange"
        android:textSize="14sp" />
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_bg"
                android:padding="10dp"
                android:text="@string/signup"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_bg"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="gone" />
    </LinearLayout>
</FrameLayout>