<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".Fragments.ProfileFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/profile"
        android:textColor="@color/red"
        android:textSize="50sp"
        android:textStyle="bold" />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/orange"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/name"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="@color/orange"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/orange"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textAlignment="center"
                android:layout_weight="1"
                android:id="@+id/email"
                android:textSize="16sp"
                android:textColor="@color/orange"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/orange"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_weight="1"
                android:textAlignment="center"
                android:id="@+id/phoneNumber"
                android:textSize="25sp"
                android:textColor="@color/orange"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>